[EFL][DRT] Fix eventSender key providing https://bugs.webkit.org/show_bug.cgi?id=84710

Patch by Kangil Han <kangil.han@samsung.com> on 2012-05-15
Reviewed by Andreas Kling.

Currently eventSender doesn't provide key event correctly.
For example, 'Right' will be visible when 'right arrow' key event is fired.
Given circumstance, nothing has to be shown.
Therefore, this patch fixed incorrectly provided key event.

Tools:

* DumpRenderTree/efl/EventSender.cpp:
(KeyEventInfo::KeyEventInfo):
(KeyEventInfo):
(keyPadNameFromJSValue):
(keyNameFromJSValue):
(createKeyEventInfo):
(sendKeyDown):

LayoutTests:

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/104153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117218 268f45cc-cd09-0410-ab3c-d52691b4dbfc